Lint jacoco 0.8.11