@@ -95,7 +95,7 @@
         <plugin.versions>2.16.1</plugin.versions> <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/versions-maven-plugin -->
 
         <plugin.dependency-check>8.4.0</plugin.dependency-check> <!-- https://mvnrepository.com/artifact/org.owasp/dependency-check-maven -->
-        <plugin.jacoco>0.8.10</plugin.jacoco> <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
+        <plugin.jacoco>0.8.11</plugin.jacoco> <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
         <plugin.jacoco.listeners>5.14.0.18788</plugin.jacoco.listeners> <!-- https://mvnrepository.com/artifact/org.sonarsource.java/sonar-jacoco-listeners -->
         <plugin.sonar>3.10.0.2594</plugin.sonar> <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
 
@@ -457,6 +457,10 @@
                         <excludes>
                             <exclude>**/Abstract*</exclude>
                         </excludes>
+                        <argLine>
+                            --enable-preview
+                            -XX:+EnableDynamicAgentLoading
+                        </argLine>
                     </configuration>
                     <dependencies>
                         <dependency>
